# Dungeons-and-Dragons-D20

./: CMakeLists.txt  D20 Game Characters customization.xlsx  README.md
src/: MAPOUT.txt  asciitable.h  donut.cpp  gameLogs.txt  main.cpp  out.txt
src/arena/combatarena/: combatarena.cpp  combatarena.h
src/arena/friendarena/: friendarena.cpp  friendarena.h
src/characters/character/: character.cpp  character.h  friend.cpp  friend.h  itemcontainer.cpp  itemcontainer.h
src/characters/character/characterObserverPattern/: CharacterObserver.cpp  CharacterObserver.h
src/characters/enemy/: enemy.cpp  enemy.h
src/characters/enemy/enemieBuilder/creeps/: creeps.cpp  creeps.h
src/characters/enemy/enemieBuilder/titan/: titan.cpp  titan.h
src/characters/player/: player.cpp  player.h
src/characters/player/playerBuilder/: builtPlayer.cpp  builtPlayer.h
src/characters/player/players/: abstract_character_builder.cpp  abstract_character_builder.h
src/characters/player/players/assasin/: assasin.cpp  assasin.h
src/characters/player/players/axe/: axe.cpp  axe.h
src/characters/player/players/bloodSeeker/: bloodSeeker.cpp  bloodSeeker.h
src/characters/player/players/spiritBreaker/: spiritBreaker.cpp  spiritBreaker.h
src/controllers/gameController/: gameController.cpp  gameController.h
src/dice/: dice.cpp  dice.h
src/items/equipment/: equipment.cpp  equipment.h
src/items/item/: item.cpp  item.h
src/logs/: logWriter.cpp  logWriter.h
src/maps/: positionable.h
src/maps/campaign/: campaign.cpp  campaign.h
src/maps/files/loadedCampaigns/: campaign1.txt  campaignFilesNames.txt
src/maps/files/loadedMaps/: map5.txt  map6.txt  mapFilesNames.txt
src/maps/files/loadedMapsInfo/: mapInfo1.txt
src/maps/files/loadedWalls/: walls1  walls2  walls3
src/maps/map/: map.cpp  map.h
src/renderEngine/gameView/: gameView.cpp  gameView.h
src/stats/abilityscores/: abilityscores.cpp  abilityscores.h
src/stats/hp/: hp.cpp  hp.h
src/stats/levelsystem/: levelsystem.cpp  levelsystem.h
